k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tenda-service
  namespace: tenda
spec:
  type: NodePort
  selector:
    app: tenda-web-app
  ports:
  - protocol: TCP
    port: 80
    nodePort: 30051
