k8s/ingress-config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: denisten.ru
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: monitoring-grafana
              port:
                number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: tenda
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: denisten.ru
      http:
        paths:
        - path: /app(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: tenda-service
              port:
                number: 80
